# bambu-poop-sorter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/bambu_poop_sorter/: Bambu_Poop_Sorter.template.toml  Bambu_Poop_Sorter.toml  __init__.py  pseries_poop_sorter.py
src/package_name/: __init__.py  package_name.py
