[build-system]
requires = ["uv_build>=0.11.18,<0.12"]
build-backend = "uv_build"

[project]
name = "package_name"
version = "0.0.1"
dependencies = [
    "example-dependency-adafruit-circuitpython-servokit>=1.3.24",
]
authors = [
  { name="William Blaney", email="billsidea@gmail.com" },
]
description = "A utility that does blah..."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/billsidea/package-name"
Documentation = "https://github.com/billsidea/package-name/blob/main/README.md"
Repository = "https://github.com/billsidea/package-name"
Issues = "https://github.com/billsidea/package-name/issues"
