[build-system]
requires = ["uv_build>=0.11.18,<0.12"]
build-backend = "uv_build"

[project]
name = "package_name"
version = "0.0.1"
dependencies = [
    "servo-sorter>=0.0.5",
    "paho-mqtt>=2.1.0",
    "webcolors>=25.10.0",
]
authors = [
  { name="William Blaney", email="billsidea@gmail.com" },
]
description = "Automated poop sorting for Bambu Lab 3D printers"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/billsidea/bambu-poop-sorter"
Documentation = "https://github.com/billsidea/bambu-poop-sorter/blob/main/README.md"
Repository = "https://github.com/billsidea/bambu-poop-sorter"
Issues = "https://github.com/billsidea/bambu-poop-sorter/issues"
